@@ -3,6 +3,7 @@ from __future__ import unicode_literals
 from django.conf import settings
 from django import template
 from django.contrib.humanize.templatetags.humanize import intcomma
+from django.contrib.messages.constants import DEFAULT_TAGS as MESSAGE_TAGS
 from django.template.defaultfilters import stringfilter
 from django.utils.safestring import mark_safe
 
@@ -281,3 +282,16 @@ def paginate(context, page, base_url='', page_key=DEFAULT_PAGE_KEY,
         'page_key': page_key,
         'paginator': page.paginator,
     }
+
+
+@register.simple_tag
+def message_tags(message):
+    level_tag = MESSAGE_TAGS.get(message.level)
+    if message.extra_tags and level_tag:
+        return message.extra_tags + ' ' + level_tag
+    elif message.extra_tags:
+        return message.extra_tags
+    elif level_tag:
+        return level_tag
+    else:
+        return ''
